Converting data streams to a list. Some functions were missing this step and were causing an error.